fixed some redundancies and added a custom scrollbar

--- a/src/main/webapp/Styles/buzzboard.css
+++ b/src/main/webapp/Styles/buzzboard.css
@@ -109,7 +109,6 @@
     padding: 0;
 
     background-color: #ffb84d;
-    background-color: #ffb84d;
 
     list-style-type: none;
 }
@@ -141,9 +140,6 @@
     color: #ffb84d;
     background-color: black;
 
-    box-sizing: border-box;
-    
-    
     box-sizing: border-box;
 }
 
@@ -185,10 +181,13 @@
     border-color: black;
 }
 
-#details-content
+#details-wrapper
 {
     display: list-item;
 
     background-color: #ffb84d;
-    overflow: hidden;
+    overflow-y: scroll;
+    overflow-wrap: break-word;
+
+    scrollbar-color: black #ffb84d;
 }
